docs(README): clarify 1.8.8-server / 1.21-client versions + how to run
- Add a "Versions" section: server is Paper 1.8.8 + MCCTF, humans join with a
  1.21 client via ViaVersion, bots connect natively as 1.8.8. "Runs on 1.21"
  means the client you join with, not the server.
- Rewrite Prereqs + "How to run": start server (JDK 17+ launch cmd), spawn a
  5v5 fleet, join with a 1.21 client, stop via Ctrl+C / RCON.
- Fix wrong --port default (was 25565, code uses 25566); document --kit and
  --log-mode args.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>